Fix some issues related to custom scrollbar resetting when changing tabs

--- a/css/styles.css
+++ b/css/styles.css
@@ -48,19 +48,11 @@ a, a:active, a:focus {
 	background-color: white;
 	padding: 0;
 	height: 100%;
-}
-
-#tabs {
-	max-width: 800px;
-	margin-left: auto;
-	margin-right: auto;
-}
-
-#tabs > div {
-	overflow-y: auto;
+	position: relative;
 }
 
 #messages{
+	padding-right: 18px;
 }
 
 #write-message {
@@ -73,7 +65,6 @@ a, a:active, a:focus {
 #message-text-field {
 	width: 100%;
 	min-height: 150px;
-
 	padding: 3px;
 	word-wrap: break-word;
 	overflow-wrap: break-word;
@@ -419,7 +410,27 @@ a, a:active, a:focus {
 
 /* Tabs */
 
-#tabs  > div:not(.active-tab) {
+#tabs {
+	max-width: 800px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+#tabs > div {
+	overflow-y: auto;
+}
+
+#tab-chat{
+	position: absolute;
+	visibility: hidden;
+}
+
+#tab-chat.active-tab {
+	position: static;
+	visibility: visible;
+}
+
+#tabs  > div:not(.active-tab):not(#tab-chat) {
 	display: none;
 }
 
